--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,6 @@
 a {
   text-decoration: none;
   color: #1b1a1a;
-  margin-right: 15px;
 }
 
 hr {
@@ -50,7 +49,6 @@ hr {
   border-radius: 5px;
   cursor: pointer;
   font-size: 18px;
-  /* width: 100px; */
 }
 
 .container {
@@ -99,14 +97,16 @@ hr {
   text-align: left;
 }
 
-.nav ul {
+.nav ul,
+.fav-list ul {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   text-decoration: none;
 }
 
-.nav ul li {
+.nav ul li,
+.fav-list li {
   list-style-type: none;
 }
 
@@ -114,7 +114,7 @@ hr {
   padding-left: 0;
 }
 
-.visible {
+.img-card {
   width: 300px;
   height: 80%;
 }
