--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,11 @@
 .App {
   font-family: 'Raleway', sans-serif;
   text-align: center;
-  /* background-color: #1b1a1a; */
-  background-color: #fefefe;
+  /* background-color: #fefefe; */
+  background-color: #ffe8b5;
   color: #1b1a1a;
   padding: 10px;
-  margin: 10px;
+  margin: 0;
   position: relative;
 }
 a {
@@ -17,7 +17,7 @@ a {
 
 hr {
   border-style: hidden;
-  background-color: #E50914;
+  background-color: #fff;
   height: 2px;
 }
 
@@ -118,3 +118,20 @@ hr {
   width: 300px;
   height: 80%;
 }
+
+.movie-page-container {
+  display: flex;
+  justify-content: stretch;
+  padding: 6em 6em 2.5em 6em;
+  gap: 7em;
+}
+
+.movie-img {
+  width: 300px;
+  height: auto;
+}
+
+.movie-box-info {
+  text-align: left;
+}
+
