--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,13 @@ hr {
   gap: 7em;
 }
 
+.movie-page-container-2 {
+  display: flex;
+  justify-content: stretch;
+  padding: 0 5em 2.5em 6em;
+  gap: 7em;
+}
+
 .movie-img {
   width: 300px;
   height: auto;
