--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,11 @@ hr {
   margin-right: 10px;
 }
 
+.logo {
+  width: 70px;
+  margin-right: 20px;
+}
+
 .item {
   margin-right: 10px;
   background: grey;
@@ -101,7 +106,7 @@ hr {
 .fav-list ul {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   text-decoration: none;
 }
 
@@ -121,9 +126,10 @@ hr {
 
 .movie-page-container {
   display: flex;
-  justify-content: stretch;
+  justify-content: space-evenly;
   padding: 6em 6em 2.5em 6em;
   gap: 7em;
+  /* flex-wrap: wrap; */
 }
 
 .movie-page-container-2 {
